--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
   },
   "dependencies": {
     "@arco-design/web-react": "^2.53.0",
+    "@sumsub/websdk": "^2.0.1",
+    "@sumsub/websdk-react": "^2.0.1",
     "@tanstack/react-query": "^4.35.0",
     "axios": "^1.5.0",
     "countries-list": "^3.0.1",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.1.1",
+    "form-data": "^4.0.0",
     "i18next": "^23.5.1",
     "react": "^18.2.0",
     "react-country-flag": "^3.1.0",
@@ -25,6 +30,7 @@
     "react-router-dom": "^6.16.0",
     "react-select": "^5.7.4",
     "react-select-country-list": "^2.2.3",
+    "react-swipeable": "^7.0.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^6.0.7",
     "zustand": "^4.4.1"
