--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-select-country-list": "^2.2.3",
     "react-swipeable": "^7.0.1",
     "react-toastify": "^9.1.3",
+    "react-webcam": "^7.1.1",
     "styled-components": "^6.0.7",
     "zustand": "^4.4.1"
   },
