--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-toastify": "^9.1.3",
     "react-webcam": "^7.1.1",
     "styled-components": "^6.0.7",
+    "swiper": "^11.0.3",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
