--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-country-flags": "^2.2.3",
     "react-datepicker": "^4.17.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.2.2",
     "react-intl": "^6.4.7",
     "react-router-dom": "^6.16.0",
